fix border-radius clipping

--- a/apps/www/app/_components/live-component/live-component.module.css
+++ b/apps/www/app/_components/live-component/live-component.module.css
@@ -1,13 +1,14 @@
 .preview {
-  border-radius: var(--ds-border-radius-xl);
+  --_br: var(--ds-border-radius-xl);
+  border-radius: var(--_br);
   border: 1px solid var(--ds-color-neutral-border-subtle);
   display: grid;
   grid-template-columns: auto auto 1fr auto;
   margin-bottom: var(--ds-size-4);
 
   & .live-preview {
-    border-top-left-radius: var(--ds-border-radius-xl);
-    border-top-right-radius: var(--ds-border-radius-xl);
+    border-top-left-radius: var(--_br);
+    border-top-right-radius: var(--_br);
     background-color: var(--ds-color-neutral-background-tinted);
     grid-column: 1 / -1;
     padding: var(--ds-size-8);
@@ -25,7 +26,7 @@
     color: var(--ds-color-neutral-text-subtle);
     font-weight: var(--ds-font-weight-regular);
     border-radius: 0;
-    border-bottom-right-radius: var(--ds-border-radius-xl);
+    border-bottom-right-radius: var(--_br);
     grid-column: 4 / 5;
     &[aria-pressed='true'] {
       > svg {
@@ -35,7 +36,8 @@
   }
 }
 .editorOuterWrapper {
-  border-radius: var(--ds-border-radius-xl);
+  --_br: var(--ds-border-radius-xl);
+  border-radius: var(--_br);
   border: 1px solid var(--ds-color-neutral-border-subtle);
   background-color: var(--ds-color-neutral-background-tinted);
   display: grid;
@@ -99,8 +101,8 @@
   font-family: monospace;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-  border-bottom-right-radius: var(--ds-border-radius-xl);
-  border-bottom-left-radius: var(--ds-border-radius-xl);
+  border-bottom-right-radius: var(--_br);
+  border-bottom-left-radius: var(--_br);
   outline-offset: -1px;
   &:focus-within {
     outline: 2px solid var(--ds-color-neutral-border-default);
@@ -111,6 +113,8 @@
     font-size: min(0.8em, 14px);
     padding: var(--ds-size-5) !important;
     white-space: pre-wrap;
+    border-bottom-left-radius: var(--_br);
+    border-bottom-right-radius: var(--_br);
   }
 
   & [class~='plain-text'] {
@@ -128,7 +132,7 @@
    --dsc-button-padding: var(--ds-size-2);
 }
 .copy {
-  border-top-right-radius: var(--ds-border-radius-xl);
+  border-top-right-radius: var(--_br);
 }
 .language {
   margin: 0;
